--- a/templates/invoices/new.html
+++ b/templates/invoices/new.html
@@ -176,15 +176,15 @@
                                     <option value="0">- Välj -</option>
                                     <optgroup label="Nämnder">
                                       <option v-for="committee in activeCommittees().filter(c => c.type == 'committee')"
-                                              :key="committee.id" v-html="committee.name" v-bind:value="committee.id"></option>
+                                              :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
                                     </optgroup>
                                     <optgroup label="Projekt">
                                       <option v-for="committee in activeCommittees().filter(c => c.type == 'project')"
-                                              :key="committee.id" v-html="committee.name" v-bind:value="committee.id"></option>
+                                              :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
                                     </optgroup>
                                     <optgroup label="Övrigt">
                                       <option v-for="committee in activeCommittees().filter(c => c.type != 'committee' && c.type != 'project')"
-                                              :key="committee.id" v-html="committee.name" v-bind:value="committee.id"></option>
+                                              :key="committee.id" v-text="committee.name" v-bind:value="committee.id"></option>
                                     </optgroup>
                                 </select>
                             </div>
@@ -201,7 +201,7 @@
                             <div class="select" v-if="expense_part.committeeId > 0">
                                 <select name="costCentre[]" v-model="expense_part.costCentreId" required>
                                     <option value="0">- Välj -</option>
-                                    <option v-for="costCentre in activeCostCentres(expense_part)" v-html="costCentre.name" v-bind:value="costCentre.id"></option>
+                                    <option v-for="costCentre in activeCostCentres(expense_part)" v-text="costCentre.name" v-bind:value="costCentre.id"></option>
                                 </select>
                             </div>
                             <div class="select disabled" v-else>
@@ -220,7 +220,7 @@
                             <div class="select" v-if="expense_part.committeeId > 0 && expense_part.costCentreId > 0">
                                 <select name="budgetLine[]" v-model="expense_part.budgetLineId" required>
                                     <option value="0">- Välj -</option>
-                                    <option v-for="budgetLine in committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId).length == 0 ? [] : committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId)[0].budget_lines" v-html="budgetLine.name" v-bind:value="budgetLine.id"></option>
+                                    <option v-for="budgetLine in committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId).length == 0 ? [] : committees.filter(x => x.id == expense_part.committeeId)[0].cost_centres.filter(x => x.id == expense_part.costCentreId)[0].budget_lines" v-text="budgetLine.name" v-bind:value="budgetLine.id"></option>
                                 </select>
                             </div>
                             <div class="select disabled" v-else>
